--- a/pom.xml
+++ b/pom.xml
@@ -11,13 +11,14 @@
   <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>         
+        <maven.compiler.target>1.8</maven.compiler.target>  
+        <java.version>1.8</java.version>       
   </properties>
   
   <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.3.RELEASE</version>
+        <version>1.5.2.RELEASE</version>
   </parent>
   
   <dependencies>
@@ -25,13 +26,27 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-        
+        <dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-data-jpa</artifactId>
+	    </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency> 
 		<dependency>
 		    <groupId>com.amazonaws</groupId>
 		    <artifactId>aws-lambda-java-core</artifactId>
 		    <version>1.0.0</version>
 		</dependency>
-		        
+		
+		<dependency>
+            <groupId>com.oracle</groupId>
+            <artifactId>ojdbc6</artifactId>
+            <version>11.2.0</version>
+        </dependency>
+		 
     </dependencies>    
 
     <build>
