--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 management.security.enabled=false
 server.port=8083
-server.context-path=/players
+server.context-path=/nba
+
+# Oracle settings
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
+spring.datasource.username=nba
+spring.datasource.password=password
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
