--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
 		    <artifactId>aws-lambda-java-core</artifactId>
 		    <version>1.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+		</dependency>
 		
 		<dependency>
             <groupId>com.oracle</groupId>
