--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,19 @@ management.security.enabled=false
 server.port=8083
 server.context-path=/nba
 
-# Oracle settings
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
-spring.datasource.username=nba
-spring.datasource.password=nba
-spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
+# Enabling H2 Console
+# spring.h2.console.enabled=true
+# spring.datasource.url=jdbc:h2:mem:testdb
+# spring.datasource.driverClassName=org.h2.Driver
+# spring.datasource.username=nba
+# spring.datasource.password=nba
+# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Oracle settings
+# spring.datasource.url=jdbc:oracle:thin:@192.168.0.131:49161:XE
+ spring.datasource.url=jdbc:oracle:thin:@10.156.67.58:49161:XE
+ spring.datasource.username=nba
+ spring.datasource.password=nba
+ spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
