--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,14 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>            
+            </plugin>       
+            <plugin>
+	       		<groupId>org.apache.maven.plugins</groupId>
+	        	<artifactId>maven-surefire-plugin</artifactId>
+	        	<configuration>
+	          		<useSystemClassLoader>false</useSystemClassLoader>
+	        	</configuration>
+	      	</plugin>     
         </plugins>
     </build>
     
