--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,13 @@
 			<groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-		</dependency>		
+		</dependency>	
+		
+		<dependency>
+		    <groupId>org.optaplanner</groupId>
+		    <artifactId>optaplanner-core</artifactId>
+		    <version>7.16.0.Final</version>
+		</dependency>	
 		
 		<dependency>
             <groupId>com.oracle</groupId>
