--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ management.security.enabled=false
 server.port=8084
 server.context-path=/nba
 
+endpoints.cors.allowed-origins=http://localhost,http://http://10.0.75.1
 
 # Enabling H2 Console
 # spring.h2.console.enabled=true
