in memory h2 entegration

--- a/pom.xml
+++ b/pom.xml
@@ -55,11 +55,19 @@
 		    <version>7.16.0.Final</version>
 		</dependency>	
 		
+		<!-- H2 Database -->
+		 <dependency>
+		 	<groupId>com.h2database</groupId>
+		 	<artifactId>h2</artifactId>
+		 </dependency>
+		
+		<!--  
 		<dependency>
             <groupId>com.oracle</groupId>
             <artifactId>ojdbc6</artifactId>
             <version>11.2.0</version>
         </dependency>
+        -->
 		 
     </dependencies>    
 
