--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,21 +2,24 @@ management.security.enabled=false
 server.port=8084
 server.context-path=/nba
 
-endpoints.cors.allowed-origins=http://localhost,http://http://10.0.75.1
+
+#endpoints.cors.allowed-origins=http://localhost,http://http://10.0.75.1
 
 # Enabling H2 Console
-# spring.h2.console.enabled=true
-# spring.datasource.url=jdbc:h2:mem:testdb
-# spring.datasource.driverClassName=org.h2.Driver
+ spring.h2.console.enabled=true
+ spring.h2.console.path=/h2
+ spring.datasource.url = jdbc:h2:mem:testdb
+ spring.datasource.driverClassName=org.h2.Driver
+ spring.datasource.username=sa
+ spring.datasource.password=
+ spring.jpa.hibernate.ddl-auto = create-drop
+ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+ 
+# Oracle settings
+# spring.datasource.url=jdbc:oracle:thin:@10.0.75.1:49161:XE
 # spring.datasource.username=nba
 # spring.datasource.password=nba
-# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-# Oracle settings
- spring.datasource.url=jdbc:oracle:thin:@10.0.75.1:49161:XE
- spring.datasource.username=nba
- spring.datasource.password=nba
- spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
- spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
+# spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
  
  
