--- a/pom.xml
+++ b/pom.xml
@@ -3,23 +3,22 @@
   <modelVersion>4.0.0</modelVersion>
   
   <groupId>com.nba</groupId>
-  <artifactId>players</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  
-  <name>Players</name>
-  
-  <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>  
-        <java.version>1.8</java.version>       
-  </properties>
+  <artifactId>fantasy</artifactId>
+  <version>0.0.1-SNAPSHOT</version>  
+  <name>Fantasy</name>
+  <description>Fantasy NBA Spring Boot</description>
   
   <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.2.RELEASE</version>
+        <version>2.1.6.RELEASE</version>
   </parent>
+  
+  <properties>
+  		<start-class>com.topal.erp.ErpApplication</start-class>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>11</java.version>       
+  </properties> 
   
   <dependencies>
         <dependency>
@@ -55,19 +54,39 @@
 		    <version>7.16.0.Final</version>
 		</dependency>	
 		
-		<!-- H2 Database -->
+		<dependency>
+		    <groupId>javax.xml.bind</groupId>
+		    <artifactId>jaxb-api</artifactId>
+		    <version>2.2.11</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.sun.xml.bind</groupId>
+		    <artifactId>jaxb-core</artifactId>
+		    <version>2.2.11</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.sun.xml.bind</groupId>
+		    <artifactId>jaxb-impl</artifactId>
+		    <version>2.2.11</version>
+		</dependency>
+		<dependency>
+		    <groupId>javax.activation</groupId>
+		    <artifactId>activation</artifactId>
+		    <version>1.1.1</version>
+		</dependency>
+		
+		<!-- H2 Database  
 		 <dependency>
 		 	<groupId>com.h2database</groupId>
 		 	<artifactId>h2</artifactId>
 		 </dependency>
-		
-		<!--  
+		-->
+		 
 		<dependency>
-            <groupId>com.oracle</groupId>
-            <artifactId>ojdbc6</artifactId>
-            <version>11.2.0</version>
-        </dependency>
-        -->
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		    <version>8.0.17</version>
+		</dependency>        
 		 
     </dependencies>    
 
