--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,20 +1,34 @@
 version: '3.3'
 
 services:
+  be_nba:
+    image: omertopal/be_erp:latest
+    container_name: be_nba
+    ports:
+      - 8084:8084
+    depends_on:
+      - nba_mysql
+    environment:
+      - DATABASE_HOST=nba_mysql
+      - DATABASE_USER=root
+      - DATABASE_PASSWORD=root
+      - DATABASE_NAME=nba
+      - DATABASE_PORT=2323
   nba_mysql:
     image: mysql:8.0
     container_name: nba_mysql
     environment: 
-        MYSQL_ROOT_PASSWORD: "root"
+      - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_DATABASE=nba
+      - MYSQL_PASSWORD=root
     user: root
     ports:
       - 2323:3306
     volumes:
-      - nbaMysqlVol:/var/lib/docker/volumes/nba_mysql
-  
+      - nbaMysqlVol:/var/lib/docker/volumes/nbamysql
   nba_phpmyadmin:
     image: phpmyadmin/phpmyadmin:latest
-    container_name: nba_phpmyadmin
+    container_name: phpmyadmin
     environment: 
         PMA_HOST: nba_mysql
     user: root
