--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8084
 server.servlet.context-path=/nba
 
 
-spring.datasource.url=jdbc:mysql://localhost:2323/nba?useSSL=false
+spring.datasource.url=jdbc:mysql://nba_mysql:2323/nba?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
