--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,10 @@
-management.security.enabled=false
-server.port=8084
-server.servlet.context-path=/nba
 
-
-spring.datasource.url=jdbc:mysql://nba_mysql:2323/nba?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3307/nba?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
  
