--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <groupId>com.nba</groupId>
   <artifactId>fantasy</artifactId>
   <version>0.0.1-SNAPSHOT</version>  
-  <name>Fantasy</name>
+  <name>nba</name>
   <description>Fantasy NBA Spring Boot</description>
   
   <parent>
@@ -30,13 +30,13 @@
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-data-jpa</artifactId>
 	    </dependency>
-	    <!-- 
+	    
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
-            <optional>true</optional>
-        </dependency> 
-         -->
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
+		</dependency>      
+		
 		<dependency>
 		    <groupId>com.amazonaws</groupId>
 		    <artifactId>aws-lambda-java-core</artifactId>
@@ -74,19 +74,12 @@
 		    <artifactId>activation</artifactId>
 		    <version>1.1.1</version>
 		</dependency>
-		
-		<!-- H2 Database  
-		 <dependency>
-		 	<groupId>com.h2database</groupId>
-		 	<artifactId>h2</artifactId>
-		 </dependency>
-		-->
 		 
 		<dependency>
 		    <groupId>mysql</groupId>
 		    <artifactId>mysql-connector-java</artifactId>
 		    <version>8.0.17</version>
-		</dependency>        
+		</dependency> 
 		 
     </dependencies>    
 
