--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ server:
 
 spring:
   datasource:
-    url: "jdbc:mysql://nbamysql:3307/nba?useSSL=false"
+    url: "jdbc:mysql://mysql:3306/nba?useSSL=false"
     username: root
     password: root    
     testWhileIdle: true
