--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:mysql://mysql:3306/nba?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.initialization-mode=always
+#spring.datasource.initialization-mode=always
 
 
 spring.jpa.hibernate.ddl-auto=update
