--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
     testWhileIdle: true
     validationQuery: SELECT 1
     driver-class-name: com.mysql.jdbc.Driver
-    initialization-mode: always
+    #initialization-mode: always
   jpa:
     hibernate:
         ddl-auto: update
