--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,9 +12,9 @@ spring:
     testWhileIdle: true
     validationQuery: SELECT 1
     driver-class-name: com.mysql.jdbc.Driver
-    #initialization-mode: always
-    #data: classpath:permutations2.sql
-    #data: classpath:players_teams_schedule.sql, classpath:permutations1.sql, classpath:permutations2.sql
+    initialization-mode: always
+    data: classpath:permutations2.sql
+    data: classpath:players_teams_schedule.sql, classpath:permutations1.sql, classpath:permutations2.sql
   jpa:
     hibernate:
         ddl-auto: update
