--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.initialization-mode=always
-spring.datasource.data=classpath:permutations2.sql
+#spring.datasource.data=classpath:permutations2.sql
 spring.datasource.data=classpath:players_teams_schedule.sql, classpath:permutations1.sql, classpath:permutations2.sql
 
 
